--- a/microservice-eureka-discovery/pom.xml
+++ b/microservice-eureka-discovery/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-provider-student</artifactId>
+    <artifactId>microservice-eureka-discovery</artifactId>
     <packaging>jar</packaging>
 
-    <name>microservice-provider-student</name>
+    <name>microservice-eureka-discovery</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -18,18 +18,10 @@
     </properties>
 
     <dependencies>
-        <!-- mybatis依赖 -->
+        <!--eureka server的依赖-->
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
         </dependency>
-
-        <!-- mysql依赖 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
