--- a/microservice-eureka-discovery/pom.xml
+++ b/microservice-eureka-discovery/pom.xml
@@ -23,5 +23,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
         </dependency>
+        <!--添加用户认证（ps:账号密码）-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 </project>
