--- a/microservice-provider-student/pom.xml
+++ b/microservice-provider-student/pom.xml
@@ -31,5 +31,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--eureka客户端依赖依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 </project>
