--- a/microservice-provider-student/src/main/resources/application.properties
+++ b/microservice-provider-student/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 #端口配置
 server.port=8082
-
-
-
-
+#应用名称
+spring.application.name=microservice-provider-student
 #数据库配置
 spring.datasource.driverClassName =com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = a
-
+#mybatis配置
 mybatis.type-aliases-package=com.yc.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
+#eureka
+#如果没有开启用户认证才采用的配置如下
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#如果开启用户认证  则
+eureka.client.serviceUrl.defaultZone=http://user:a@localhost:8761/eureka/
+#表示将自己的ip注册到eureka server 如果不配或者为fals则表示将计算记得hostname注册到eureka server
+eureka.instance.prefer-ip-address=true
+#将应用注册到集群服务器上的写法 eureka.client.serviceUrl.defaultZone=http://peer1:8761/eureka/,http://peer2:8762/eureka/
