--- a/microservice-eureka-discovery/src/main/resources/application.properties
+++ b/microservice-eureka-discovery/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8761
 #应用的名字
 spring.application.name=eureka-server
+
 #eureka配置
 #表示是否把自己注册到Eureka上 默认为true
 eureka.client.registerWithEureka=false
@@ -9,6 +10,14 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 #设置与eureka server交互的地址
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+
+#用户认证配置
+#开启基于Http 的basic的认证
+security.basic.enabled=true
+#用户名这一段不配置的话默认用户为user密码随机 启动得时候会打印出来
+security.user.name=user
+security.user.password=a
+
 
 
 
